# clojure-metal

./: README.md  project.clj
cmsl/: .#CMakeLists.txt  CMakeLists.txt
cmsl/cmsl/: CMakeLists.txt  gc.cpp  gc.h
cmsl/tests/: CMakeLists.txt  main.cpp
doc/: intro.md
src/clojure_metal/: analyzer.clj  compiler.clj  core.clj  emit.clj  gc.clj  llvmc.clj  primitives.clj  state_monad.clj  types.clj
src/clojure_metal/targets/: darwin.clj  target.clj  x86_cpus.clj
test/clojure_metal/: core_test.clj
